Challenge 관련 코드 Rework (#35)
* REFACT : * 표시 없애기

* UPDATE : 시간대를 전부 Instant, 리스트 관련 자료구조는 전부 List로 ArrayList 위주로 변경

* UPDATE : MySQL에서 MongoDB로 이전 작업 중

* ADD : Docker, MongoDB 연동 관련 파일 작성

* ADD : Docker, MongoDB 연동 관련 코드 작성 중

* REFACT : (자잘자잘한 작업) * 없애기, Instant로 변환 시키기 (임시로 한 것이라서 추후에 테스트를 위해서 변경할 것)

* UPDATE : Authentication에 MongoDB 관련 코드로 교체 증, Controller랑 Service 역할 제대로 분리하는 중

* DELETE : .class 파일 삭제, .gitignore에 .class 추가

* UPDATE :.gitignore에서 .class 지우고 .out으로

* UPDATE : return값 내에서 void 없애기

* UPDATE : return값 내에서 void 없애기

* UPDATE : challenge쪽 주석 추가

* UPDATE : challenge쪽 Entity, DTO 코드 다시 작업 중 + Controller, Service, Repository도 건드릴 예정

* UPDATE : DTO -> Dto로 이름 변경

* UPDATE : Interaction 관련 코드 리워크 중

* ADD : model mapper 버전 명시해서 build.gradle에 추가

* ADD : ModelMapperConfig.java 파일 추가

* UPDATE : Challenge Interaction 관련 코드 1차(?) Rework 완료 - 추후 TODO 코드 수정 예정

* UPDATE : Kafka와 Zookeeper 관련 코드 추가

* UPDATE : Kafka와 Zookeeper 관련 코드 추가

* ADD : build.gradle Kafka와 Zookeeper 관련 코드 추가

* ADD : kafka 관련 코드 추가 중

* ADD : Management 작업 - Challenge, Participant의 Entity와 Dto에서 필요한 필드 추가

* ADD : InteractionController.java에서 Dto를 그대로 반환해주면 안되어서 Model Mapper로 코드 변환

* ADD : Management 관련 전체 코드 변경, 추후 작업은 필요 시 수정 예정

* ADD : Verification 관련 전체 코드 변경, 추후 작업은 필요 시 수정 예정

* ADD : Payment 관련 전체 코드 변경, 추후 작업은 필요 시 수정 예정 - 필요 시 결제 관련 API 도입 예정

* ADD : Kafka 서브 모듈 - 알림 메시지 관련된 내용 구현

* ADD : kafka 모듈에 lombok 라이브러리 추가

* ADD : kafka 모듈에서 알림 관련 서비스 위해서 코드 추가

* ADD : Interaction 모듈에서 알림 서비스 추가 중

* ADD : Interaction 모듈에서 알림 서비스 추가 중

* DELETE : Interaction 모듈에서 알림 서비스 추가중인데 Repository 관련된 부분 해결 후 추가 예정

* UPDATE : Management 모듈에서 인피니트 스크롤 + 커서 기반 페이지네이션 기능 구현 중 (테스트 및 멘토님 피드백 반영 후 코드 수정 예정)

* UPDATE : 사용하지 않는 코드 삭제

* UPDATE : MongoDB 드라이버를 통해서 코드 작성

* DELETE : MongoDB 드라이버 라이브러리 관련 테스트 파일 삭제

* DELETE : MongoDB Driver 관련 주석 삭제

* UPDATE : boolean -> Boolean으로 변경 Null 체크를 위해서

* UPDATE : E