@@ -5,6 +5,7 @@ import daehee.challengehub.challenge.interaction.entity.Review;
 import daehee.challengehub.challenge.interaction.model.ChatMessageDto;
 import daehee.challengehub.challenge.interaction.model.ReviewDto;
 import daehee.challengehub.challenge.interaction.service.InteractionService;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -14,23 +15,24 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/challenges")
 public class InteractionController {
     private final InteractionService interactionService;
+    private final ModelMapper modelMapper;
 
     @Autowired
-    public InteractionController(InteractionService interactionService) {
+    public InteractionController(InteractionService interactionService, ModelMapper modelMapper) {
         this.interactionService = interactionService;
+        this.modelMapper = modelMapper;
     }
 
     // 챌린지 채팅방의 메시지를 전송하는 API
     @PostMapping("/{id}/chat/message")
     public ChatMessageDto postChatMessage(@PathVariable String id, @RequestBody ChatMessageDto chatMessageDto) {
-        interactionService.postChatMessage(id, chatMessageDto);
-        return chatMessageDto;
+        ChatMessage chatMessage = interactionService.postChatMessage(id, chatMessageDto);
+        return modelMapper.map(chatMessage, ChatMessageDto.class);
     }
 
     // 특정 챌린지의 채팅방 내용을 조회하는 API
@@ -39,15 +41,15 @@ public class InteractionController {
     public List<ChatMessageDto> getChatMessages(@PathVariable String id) {
         List<ChatMessage> chatMessages = interactionService.getChatMessages(id);
         return chatMessages.stream()
-                .map(this::convertToChatMessageDto)
-                .collect(Collectors.toList());
+                .map(message -> modelMapper.map(message, ChatMessageDto.class))
+                .toList();
     }
 
     // 챌린지에 후기 및 별점을 작성하는 API
     @PostMapping("/{id}/review")
     public ReviewDto postReview(@PathVariable String id, @RequestBody ReviewDto reviewDto) {
-        interactionService.postReview(id, reviewDto);
-        return reviewDto;
+        Review review = interactionService.postReview(id, reviewDto);
+        return modelMapper.map(review, ReviewDto.class);
     }
 
     // 특정 챌린지의 모든 후기 및 별점을 조회하는 API
@@ -56,7 +58,8 @@ public class InteractionController {
     public List<ReviewDto> getReviews(@PathVariable String id) {
         List<Review> reviews = interactionService.getReviews(id);
         return reviews.stream()
-                .map(this::convertToReviewDto)
-                .collect(Collectors.toList());
+                .map(review -> modelMapper.map(review, ReviewDto.class))
+                .toList();
     }
 }
+
